# ScriptToolbox

./: .gitignore  LICENSE  README.md  pyproject.toml
helpful_cakes/: rename_folder.py
helpful_cakes/model/: rename_folder_model.py
helpful_cakes/utils/: common_functions.py
helpful_cakes/view/: logger.py  rename_folder_view.py
script/: rename_folder.py  rename_items.py  switcher.py
test/: test_rename_folder.py  test_rename_item.py  test_switcher.py
